# calendar

backend/: .gitignore  Cargo.toml
backend/app/: index.html
backend/migrations/: 20241103130057_create_tables.sql
backend/src/: main.rs  store.rs
backend/static/: index.html
backend/static/assets/: index-B3L3g5uH.css  index-DRB9M3Yf.js  index-DXu5bLPz.js
backend/test_api/: add_note.hurl
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  lib.ts  utils.ts
frontend/src/components/: CalendarTableMonth.tsx  CalendarTableWeek.tsx  Header.tsx  NoteEditModal.tsx  NoteList.tsx
