[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3.36", features = ["macros", "serde"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
